syntax = "proto3";
option go_package  = "./protos";

service DockerService {
    //Build image
    rpc BuildImage (BuildImageRequest) returns (BuildImageResponse);

    //Run container
    rpc RunContainer (RunContainerRequest) returns (RunContainerResponse);

    //Stop container
    rpc StopContainer (StopContainerRequest) returns (StopContainerResponse);

    //Remove image
    rpc RemoveImage (RemoveImageRequest) returns (RemoveImageResponse);

    //...//
}

message BuildImageRequest {
    string image_name = 1;
}

message BuildImageResponse {
    string message = 1;
}

message RunContainerRequest {
    string message = 1;
}

message RunContainerResponse {
    string message = 1;
}

message StopContainerRequest {
    string message = 1;
}

message StopContainerResponse {
    string message = 1;
}

message RemoveImageRequest {
    string message = 1;
}

message RemoveImageResponse {
    string message = 1;
}